home/namespaced/mtaylor-io/iam-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-mtaylor-io
spec:
  template:
    spec:
      containers:
      - name: iam
        args:
        - --postgres
