home/namespaced/mtaylor-io/status-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-mtaylor-io
spec:
  template:
    spec:
      containers:
      - name: status-mtaylor-io
