home/namespaced/mtaylor-io/virtualservices.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mtaylor-io
  annotations:
    external-dns.alpha.kubernetes.io/target: 91279420-9a62-4119-a0c9-b8a0ef00a087.cfargotunnel.com
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - mtaylor.io
  http:
  - match:
    - uri:
        prefix: "/api/v1/socket"
    route:
    - destination:
        host: event-service.mtaylor-io.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: web.mtaylor-io.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-mtaylor-io
  annotations:
    external-dns.alpha.kubernetes.io/target: 91279420-9a62-4119-a0c9-b8a0ef00a087.cfargotunnel.com
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - admin.mtaylor.io
  http:
  - route:
    - destination:
        host: admin-mtaylor-io.mtaylor-io.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: www-mtaylor-io
  annotations:
    external-dns.alpha.kubernetes.io/target: 91279420-9a62-4119-a0c9-b8a0ef00a087.cfargotunnel.com
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - www.mtaylor.io
  http:
  - redirect:
      authority: mtaylor.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iam-mtaylor-io
  annotations:
    external-dns.alpha.kubernetes.io/target: 91279420-9a62-4119-a0c9-b8a0ef00a087.cfargotunnel.com
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - iam.mtaylor.io
  http:
  - route:
    - destination:
        host: iam.mtaylor-io.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      - OPTIONS
      allowCredentials: true
      allowHeaders:
      - Content-Type
      - Authorization
      - X-MTaylor-IO-User-Id
      - X-MTaylor-IO-Public-Key
      - X-MTaylor-IO-Request-Id
      - X-MTaylor-IO-Session-Token
      maxAge: "24h"
